[package]
# Edition of manifest
edition = "2021"

name = "lenker"
# !! ALSO UPDATE src/version.rs FILE !!
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#[profile.dev]
#strip = "symbols"

[profile.release]
strip = "symbols"
