[package]
# Edition of manifest
edition = "2021"

name = "lenker"
# !! ALSO UPDATE src/version.rs FILE !!
# And run a build with the new version (it updates Cargo.lock)
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#[profile.dev]
#strip = "symbols"

[profile.release]
strip = "symbols"
